Small layout fix for missing border of top score panel on board page.

--- a/src/main/webapp/App.css
+++ b/src/main/webapp/App.css
@@ -3,7 +3,7 @@ body {
 	background-color: white;
 	background-image: url('images/brickwall_@2X.png');
 	background-repeat: repeat;
-	min-width: 750px;
+	min-width: 1050px;
 	text-align: center;
 }
 h1 {
@@ -90,7 +90,6 @@ h1 {
 	overflow: hidden;
 	display: inline-block;
 	position: relative;
-	min-width: 1040px;
 	margin: auto;
 	
 	-webkit-touch-callout: none;
@@ -175,6 +174,7 @@ h1 {
 }
 
 .score-panel {
+	position: relative;
 	font-family: sans-serif;
 	padding: 5px;
 	border-style: solid;
